# simulated-design

./: .flake8  .gitignore  pyproject.toml  pytest.ini  requirements-py311-linux64.txt  requirements-py311-macos_x86_64.txt  requirements-py311-win64.txt  requirements-py312-linux64.txt  requirements-py312-win64.txt  requirements.txt
.github/workflows/: docs.yml  test.yml
config/pyproject/: poetry311.toml  poetry311_linux.toml  poetry311_win.toml  poetry312_linux.toml  poetry312_win.toml  setuptools.toml
data/: example-custom-geometry.xlsx  irregular-geometry.xlsx  simple-nonuniform-geometry.xlsx  simple-uniform-geometry.xlsx
data/core-article-data/figures 10/CDM/: BCIM.csv
data/core-article-data/figures 10/CDN/: BCIM.csv
data/core-article-data/figures 8 and 9/: BCIM.csv
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/design/: specific-design.html
docs/source/_static/geometry/: irregular-geometry.html  simple-nonuniform-geometry.html  simple-uniform-geometry.html  specific-frame-geometry.html
docs/source/_static/modal/: mode_1_shape.html  mode_2_shape.html  model_view.html
docs/source/api/: index.rst  simdesign.rcmrf.bcim.parametrization.rst  simdesign.rcmrf.rst
docs/source/api/rcmrf/: index.rst
docs/source/api/utils/: index.rst  mesh.rst  misc.rst  plotter.rst  rcsection.rst  stats.rst  units.rst
docs/source/getting-started/: index.rst  installation.rst  usage.rst
docs/source/user/: index.rst  inputs.rst  inputs_bcim.rst  inputs_bnsm.rst  installation.rst  quickstart.rst
docs/source/user/examples/: batch_nspa.rst  design_with_specific_geometry.rst  geometry.rst  index.rst  workflow_design_classes.rst  working_with_bcim.rst
scripts/: design_plotter.py  design_with_custom_geometry.py  design_with_specific_geometry.py  how_to_work_with_bcim.py  making_L_shape_geometry.py  making_complex_geometry.py  making_simple_nonuniform_geometry.py  making_simple_uniform_geometry.py  reading_custom_geometry.py  run_batch_nspa.py  run_bed_workflow.py
simdesign/: __init__.py
simdesign/rcmrf/: __init__.py
simdesign/rcmrf/bcim/: __init__.py  factory.py  model.py  parametrization.py  randomization.py
simdesign/rcmrf/bcim/data/: eu_cdh.json  eu_cdl.json  eu_cdm.json  eu_cdn.json  layouts.csv  tr_0018_dch.json  tr_0018_dcm.json  tr_7599.json  tr_post18_dch.json  tr_post18_dcm.json  tr_pre75.json
simdesign/rcmrf/bdim/: __init__.py  factory.py  model.py
simdesign/rcmrf/bdim/baselib/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/eu_cdh/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/eu_cdl/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/eu_cdm/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/eu_cdn/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_0018_dch/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_0018_dcm/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_7599/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_post18_dch/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_post18_dcm/: __init__.py  analysis.py  beam.py  building.py  column.py  infill.py  joint.py  loads.py  materials.py  quality.py  rebars.py  slab.py  stairs.py
simdesign/rcmrf/bdim/tr_pre75/: beam.py  building.py  column.py  joint.py  loads.py  materials.py  quality.py  rebars.py
simdesign/rcmrf/bnsm/: __init__.py  beam.py  column.py  factory.py  floor.py  joint.py  model.py
simdesign/rcmrf/bnsm/baselib/: __init__.py  beam.py  building.py  column.py  constants.py  floor.py  foundation.py  infill.py  joint.py  node.py
simdesign/rcmrf/bnsm/cp01/: __init__.py  beam.py  building.py  column.py  floor.py  foundation.py  infill.py  joint.py
simdesign/rcmrf/geometry/: __init__.py  base.py  custom.py  standard.py
simdesign/utils/: __init__.py  mesh.py  misc.py  plotter.py  rcsection.py  stats.py  units.py
tests/: test_parametrization.py  test_rcmrf.py
tmp/: complex-geometry.html  modified-custom-geometry.html
(+745 files in other folders)
