[tool.poetry]
name = "simdesign"
version = "1.0.0-beta"
description = "The built environment data (BED) framework for enhancing seismic vulnerability modeling through simulated design."
authors = ["Volkan Ozsarac <ozsarac.volkan@eucentre.it>"]
readme = "docs/README.md"
license = "AGPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPL-3.0)"
]
packages = [{ include = "simdesign" }]
keywords = ["earthquake", "seismic", "design", "simulation", "vulnerability"]

[tool.poetry.dependencies]
python = "~3.12"
scipy = "1.15.1"
pandas = "2.2.3"
pyarrow = "19.0.0"
openpyxl = "3.1.5"
"pyvista" = { version = "0.44.2", extras = ["all"] }
pydantic = "2.10.6"
openseespy = "3.8.0.0"
openseespywin = { version = "3.8.0.0", markers = "sys_platform == 'win32'" }
openseespylinux = { version = "3.8.0.0", markers = "sys_platform == 'linux'" }
openseespymac = { version = "3.8.0.0", markers = "sys_platform == 'darwin'" }

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
pytest = "8.3.4"
pytest-cov = "5.0.0"
pytest-env = "1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"