[tool.poetry]
name = "simdesign"
version = "1.0.0"
description = "The built environment data (BED) framework for enhancing seismic vulnerability modeling through simulated design."
authors = [
    "Volkan Ozsarac <volkan.ozsarac@iusspavia.it>",
    "Serkan Hasanoglu <serkan.hasanoglu@iusspavia.it>"
    ]
readme = "docs/README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
packages = [{ include = "simdesign" }]
keywords = [
    "earthquake engineering",
    "seismic design",
    "numerical simulation",
    "seismic vulnerability"
]
homepage = "https://simdesign.builtenvdata.eu/"
repository = "https://github.com/builtenvdata/simulated-design"
documentation = "https://builtenvdata.github.io/simulated-design/"

[tool.poetry.urls]
Issues = "https://github.com/builtenvdata/simulated-design/issues"

[tool.poetry.dependencies]
python = "~3.12"
scipy = "1.15.1"
pandas = "2.2.3"
pyarrow = "19.0.0"
openpyxl = "3.1.5"
pyvista = { version = "0.44.2", extras = ["all"] }
pydantic = "2.10.6"
openseespy = "3.8.0.0"
openseespywin = { version = "3.8.0.0", markers = "sys_platform == 'win32'" }
openseespylinux = { version = "3.8.0.0", markers = "sys_platform == 'linux'" }
openseespymac = { version = "3.8.0.0", markers = "sys_platform == 'darwin'" }

[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"
pytest = "9.0.3"
pytest-cov = "5.0.0"
pytest-env = "1.1.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^9.1"
sphinx-rtd-theme = "^3.0"

[tool.coverage.run]
source = ["simdesign"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"